xml/src1/objects/School_Served__c.object
<CustomObject>
    <description>Organization Schools in Organization Collegiate Ministry</description>
    <fields>
        <fullName>City__c</fullName>
        <description>City where School is</description>
        <formula>School_Organization__r.SearchLayout_City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collegiate_Ministry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Collegiate Ministry Organization</description>
        <label>Collegiate Ministry</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Schools Served (Collegiate Ministry)</relationshipLabel>
        <relationshipName>Organization_Collegiate_Ministry_Schools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Institution_Type__c</fullName>
        <description>Display Picklist values</description>
        <formula>TEXT( School_Organization__r.Institution_Type__c )</formula>
        <label>Institution Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>School Organizations</description>
        <label>School Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Schools Served (School Organization)</relationshipLabel>
        <relationshipName>Collegiate_Ministry_School_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State Where School is in</description>
        <formula>School_Organization__r.SearchLayout_State__c</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <label>Schools Served</label>
    <nameField>
        <displayFormat>Served-{00000000}</displayFormat>
        <label>School Served ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schools Served</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>